# Avangard-chat

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  codecov.yml  compose.yml  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
app/: config.py  database.py  dependencies.py  links.py  logger.py  main.py  rate_limit.py  security.py
app/core/: client_ip.py  config.py  dependencies.py  message_crypto.py
app/dragonfly/: adapter.py  container.py  keys.py  service.py
app/model/: chat_room.py  message.py  refresh_session.py  user.py
app/modules/auth/: router.py  schemas.py  service.py
app/modules/calls/: model.py  router.py  schemas.py  service.py
app/modules/file/: router.py  schemas.py
app/modules/messages/: model.py  router.py  schemas.py  service.py
app/modules/rooms/: model.py  router.py  schemas.py  service.py
app/router/: auth.py  health.py  messages.py  rooms.py  users.py  ws.py
app/schema/: auth.py  chat_room.py  message.py  user.py  ws.py
app/service/: auth_service.py  message_service.py  room_service.py
app/typesense/: adapter.py  container.py  service.py
app/ws/: chat_handler.py  manager.py
deploy/: livekit.yaml
infra/keycloak/: realm-config.json
scripts/: check_commit_msg.py  check_pr_title.py
tests/: conftest.py  test_auth.py  test_dragonfly_integration.py  test_message_encryption_search.py  test_proxy_and_config.py  test_typesense_integration.py  test_websocket.py
tests/api/: test_access_control.py  test_attachments.py  test_auth.py  test_avatar.py  test_calls.py  test_direct_messages.py  test_group_membership_and_read_state.py  test_health_and_openapi.py  test_message_encryption_search.py  test_rooms_messages_contracts.py  test_user_presence.py  test_websocket.py
tests/fixtures/: app.py
tests/helpers/: auth.py  chat.py  user_profile.py
tests/unit/: test_architecture_imports_checker.py  test_auth_service.py  test_dragonfly_service.py  test_livekit_adapter.py  test_livekit_service.py  test_proxy_and_config.py  test_room_service.py  test_s3_service.py  test_service_di.py  test_tokens.py  test_unread_counter_service.py
(+40 files in other folders)
