[project]
name = "avangard-chat"
version = "0.1.0"
description = "Avangard chat backend"
requires-python = ">=3.12"
dependencies = [
  "beanie==1.26.0",
  "fastapi==0.115.0",
  "httpx==0.27.2",
  "motor==3.6.0",
  "pydantic-settings==2.4.0",
  "pydantic[email]==2.8.2",
  "pymongo==4.9.2",
  "python-dotenv==1.0.1",
  "python-jose[cryptography]==3.3.0",
  "uvicorn[standard]==0.30.6",
  "websockets==13.0",
]

[tool.uv]
package = false
