[project]
name = "avangard-chat"
version = "0.1.0"
description = "Avangard chat backend"
requires-python = ">=3.12"
dependencies = [
  "argon2-cffi==23.1.0",
  "beanie==1.26.0",
  "cryptography==43.0.1",
  "fastapi==0.115.0",
  "httpx==0.27.2",
  "motor==3.6.0",
  "pydantic-settings==2.4.0",
  "pydantic==2.8.2",
  "pyjwt==2.10.1",
  "pymongo==4.9.2",
  "python-dotenv==1.0.1",
  "redis==5.2.1",
  "uvicorn[standard]==0.30.6",
  "websockets==13.0",
]

[dependency-groups]
dev = [
  "mongomock-motor==0.0.35",
  "pre-commit>=4.2,<5",
  "pytest==8.3.5",
  "pytest-cov>=6.0,<7",
  "ruff>=0.11,<0.12",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
markers = [
  "integration: tests using a dragonfly backend",
]
